--- a/package.json
+++ b/package.json
@@ -6,16 +6,32 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "setupFiles": [
+      "./setup-test.js"
+    ]
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@reduxjs/toolkit": "^1.9.2",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
+    "jest": "^26.6.3",
+    "jest-expo": "^47.0.1",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "redux-mock-store": "^1.5.4"
   },
   "private": true
 }
